--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cientifico-jsvanilla",
+  "name": "cientifico",
   "version": "1.0.0",
   "description": "single page application",
   "main": "index.js",
@@ -10,14 +10,15 @@
   "keywords": [
     "javascript"
   ],
-  "author": "kathecr",
-  "license": "ISC",
+  "author": "Oscar Barajas <oscar@platzi.com>",
+  "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "babel-loader": "^8.2.2",
-    "html-webpack-plugin": "^5.3.1",
-    "webpack": "^5.35.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.2"
+    "@babel/core": "^7.7.5",
+    "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
