--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "devDependencies": {
     "@babel/core": "^7.7.5",
     "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^5.1.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.9.0"
+  },
+  "dependencies": {
+    "copy-webpack-plugin": "^6.2.1"
   }
 }
